# smartscroll

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
apps/api/: pyproject.toml
apps/api/smartscroll/: __init__.py  config.py  main.py
apps/api/smartscroll/models/: __init__.py  firestore.py
apps/api/smartscroll/pipeline/: __init__.py  orchestrator.py  render.py
apps/api/smartscroll/prompts/: script_rewrite.py
apps/api/smartscroll/routes/: chat.py  events.py  feed.py  health.py  messages.py  pdfs.py  quiz.py  topics.py  users.py
apps/api/smartscroll/services/: auth.py  backboard.py  firestore.py  ingestion.py  storage.py  tts.py  vertex.py
apps/web/: package-lock.json  package.json  pnpm-lock.yaml
apps/web/src/: App.css  App.jsx  firebase.js  index.css  main.jsx
apps/web/src/api/: client.js
apps/web/src/components/: BottomBar.css  BottomBar.jsx  CommentDrawer.css  CommentDrawer.jsx  FeedCard.css  FeedCard.jsx  QuizOverlay.css  QuizOverlay.jsx  ShareModal.css  ShareModal.jsx  SmartFeed.css  SmartFeed.jsx  SmartFeedPlaceholder.css  SmartFeedPlaceholder.jsx  TopTabs.css  TopTabs.jsx  UploadPanel.css  UploadPanel.jsx
apps/web/src/contexts/: AuthContext.jsx
apps/web/src/data/: mockFeed.js
apps/web/src/pages/: AuthPage.css  AuthPage.jsx  FeedPage.css  FeedPage.jsx  InboxPage.css  InboxPage.jsx  SearchPage.css  SearchPage.jsx  UploadPage.css  UploadPage.jsx
docs/: data-model.md
scripts/: create_voice.py  pipeline_local.py  seed_gameplay.py  test_caption.py  test_tts.py
src/smartscroll/: ingestion.py
tests/: test_ingestion.py
