[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartscroll"
version = "0.1.0"
description = "TikTok-style AI-narrated PDF summaries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.41.0",
    "ipython>=8.39.0",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smartscroll"]

[tool.hatch.build.targets.sdist]
include = ["src/smartscroll"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps/api"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["smartscroll"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
