[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartscroll"
version = "0.1.0"
description = "TikTok-style AI-narrated PDF summaries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "google-cloud-storage>=2.18.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-aiplatform>=1.71.0",
    "vertexai>=1.71.0",
    "pymupdf>=1.27.2.3",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "ffmpeg-python>=0.2.0",
    "yt-dlp>=2024.1.0",
    "firebase-admin>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps/api/smartscroll"]

[tool.hatch.build.targets.sdist]
include = ["apps/api/smartscroll"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps/api"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["smartscroll"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
